--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,16 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
-
-$primary-color: #22254b;
-$secondary-color: #373b69;
-
-:root {
-  --primary-color: #{$primary-color};
-  --secondary-color: #{$secondary-color};
-}
-
-* {
-  box-sizing: border-box;
-}
+@import 'import';
+@import 'reset';
 
 body {
   background-color: var(--primary-color);
@@ -26,7 +15,7 @@ header {
 }
 
 .search {
-  background-color: transparent;
+  background-color: $txt-primary-color;
   border: 2px solid var(--primary-color);
   border-radius: 50px;
   font-family: inherit;
@@ -35,7 +24,7 @@ header {
   color: #fff;
 
   &::placeholder {
-    color: #7378c5;
+    color: $secondary-color;
   }
 
   &:focus {
@@ -53,7 +42,7 @@ main {
 .movie {
   width: 300px;
   margin: 1rem;
-  background-color: var(--secondary-color);
+  background-color: var(--background-color);
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
   position: relative;
   overflow: hidden;
@@ -65,7 +54,7 @@ main {
 }
 
 .movie-info {
-  color: #eee;
+  color: $secondary-color;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -78,7 +67,7 @@ main {
   }
 
   span {
-    background-color: var(--primary-color);
+    background-color: var(--background-color);
     padding: 0.25rem 0.5rem;
     border-radius: 3px;
     font-weight: bold;
@@ -98,7 +87,7 @@ main {
 }
 
 .overview {
-  background-color: #fff;
+  background-color: $background-color;
   padding: 2rem;
   position: absolute;
   left: 0;
