--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -40,27 +40,24 @@ header {
 
 
 .search-form {
-  max-width: 28rem;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 100%;
 
-  .search-label {
-      margin-bottom: 0.5rem;
-      font-size: 0.875rem;
-      font-weight: 500;
-      color: #374151;
-  }
 
-  .visually-hidden {
-      position: absolute;
-      width: 1px;
-      height: 1px;
-      padding: 0;
-      margin: -1px;
-      overflow: hidden;
-      clip: rect(0, 0, 0, 0);
-      border: 0;
-  }
+  // .search-label {
+  //     font-size: 0.875rem;
+  //     font-weight: 500;
+  // }
+
+  // .visually-hidden {
+  //     position: absolute;
+  //     width: 1px;
+  //     height: 1px;
+  //     padding: 0;
+  //     margin: -1px;
+  //     overflow: hidden;
+  //     clip: rect(0, 0, 0, 0);
+  //     border: 0;
+  // }
 
   .search-wrapper {
       position: relative;
@@ -68,9 +65,10 @@ header {
 
   .search-icon {
       position: absolute;
-      top: 0;
+      top: 1;
       left: 0;
       display: flex;
+      text-align: center;
       align-items: center;
       padding-left: 0.75rem;
 
@@ -83,28 +81,30 @@ header {
 
   .search-input {
       width: 100%;
-      padding: 1rem;
+      padding: 0.89rem;
       padding-left: 2.5rem;
+      margin-right: 10.5em;
       border-width: 1px;
       border-color: #d1d5db;
       border-radius: 0.5rem;
       background-color: #f9fafb;
-      font-size: 0.875rem;
-      color: #374151;
+      font-size: 1rem;
+      color: #000000;
       &::placeholder {
-          color: #9ca3af;
+          color: #000000;
       }
       &:focus {
-          outline: 2px solid #3b82f6;
-          border-color: #3b82f6;
+          outline: 2px solid #de737a;
+          border-color: #de737a;
       }
   }
 
-  .search-btn {
+  .search {
       position: absolute;
       right: 0.625rem;
-      bottom: 0.625rem;
+      bottom: 0.629rem;
       background-color: #2563eb;
+      margin: auto 0;
       padding: 0.5rem 1rem;
       font-weight: 500;
       color: #fff;
@@ -113,11 +113,11 @@ header {
       border: none;
       cursor: pointer;
       &:hover {
-          background-color: #1e40af;
+          background-color: #de737a;
       }
       &:focus {
           outline: none;
-          box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
+          box-shadow: #de737a;
       }
   }
 }
