--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -43,21 +43,6 @@ header {
   max-width: 100%;
 
 
-  // .search-label {
-  //     font-size: 0.875rem;
-  //     font-weight: 500;
-  // }
-
-  // .visually-hidden {
-  //     position: absolute;
-  //     width: 1px;
-  //     height: 1px;
-  //     padding: 0;
-  //     margin: -1px;
-  //     overflow: hidden;
-  //     clip: rect(0, 0, 0, 0);
-  //     border: 0;
-  // }
 
   .search-wrapper {
       position: relative;
@@ -82,6 +67,9 @@ header {
   .search-input {
       width: 100%;
       padding: 0.89rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding-left: 2.5rem;
       margin-right: 10.5em;
       border-width: 1px;
