--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -10,7 +10,7 @@ body {
 header {
   background-color: $primary-color;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center; 
   padding: 1rem;
 }
